Changelog
=========

1.0b3 (2009-02.05)
------------------

- Only display the carousel on default view; not any of the other tabs.
  [davisagli]

- Fix viewlet removal on uninstallation.
  [davisagli]

- Fix duplicate entries in quick installer.
  [davisagli]


1.0b2 (2009-02-04)
------------------

- Declare dependency of our custom GS import step on the viewlets step.
  [davisagli]

- Separate the (globally-registered) template from the (locally-registered)
  viewlet, so that the former can be customized using
  portal_view_customizations.
  [davisagli]

- Added banner description to the template.  Changed the 'carousel-title'
  class to 'carousel-button' so I could split out 'carousel-title' and
  'carousel-description'.
  [davisagli]

- Handle non-structural folders correctly.
  [davisagli]


1.0b1 (2009-02-03)
------------------

- Initial release.
  [davisagli]