@@ -5,7 +5,7 @@
      tal:condition="python:banners and context_state.is_view_template()">
 
     <div id="carousel-banners"
-        tal:define="size python:banners[0].getField('image').getSize(banners[0]);
+        tal:define="size python:banners[0].getSize();
                     height python:size[1];
                     width python:size[0]"
         tal:attributes="style string:width: ${width}px;; height: ${height}px;;">
@@ -15,7 +15,7 @@
                            class python:repeat['banner'].start and 'carousel-banner selected' or 'carousel-banner';
                            style python:repeat['banner'].start and 'display: block' or 'display: none';
                            title banner/Title;">
-            <img tal:replace="structure python:banner.getField('image').tag(banner)"/>
+            <img tal:replace="structure python:banner.tag()"/>
         </a>
       </tal:image_loop>
     </div>
